# NarrativeEngine

./: README.md
jules_session_9194329127039046407_narrative-engine-init-9194329127039046407/: CMakeLists.txt
jules_session_9194329127039046407_narrative-engine-init-9194329127039046407/src/core/: board.cpp  board.hpp  movegen.cpp  movegen.hpp  position.cpp  position.hpp  tensor.hpp
jules_session_9194329127039046407_narrative-engine-init-9194329127039046407/src/engine/: main.cpp
jules_session_9194329127039046407_narrative-engine-init-9194329127039046407/src/inference/: cpu_backend.hpp  factory.cpp  inference_engine.hpp  mps_backend.mm
jules_session_9194329127039046407_narrative-engine-init-9194329127039046407/src/utils/: mdspan.hpp  shared_memory.cpp  shared_memory.hpp  shared_memory.mm  simd.hpp
jules_session_9194329127039046407_narrative-engine-init-9194329127039046407/tests/: test_board.cpp  test_simd.cpp  test_tensor.cpp
